crates/ignis_analyzer/tests/snapshots/golden_err__double_colon_on_value.snap
---
source: crates/ignis_analyzer/tests/golden_err.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[ERROR] A0058: 'u' is not an enum
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:107-112
