crates/ignis_analyzer/tests/snapshots/golden_err__double_free_immediate.snap
---
source: crates/ignis_analyzer/tests/golden_err.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[ERROR] O0009: Pointer 'p' has already been freed
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:225-254
