crates/ignis_analyzer/tests/snapshots/golden_err__enum_copy_noncopy_payload_diags.snap
---
source: crates/ignis_analyzer/tests/golden_err.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[ERROR] A0149: type 'MaybeMsg' declares @implements(Copy) but variant 'Some' payload 0 has non-Copy type 'string'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:19-63
