crates/ignis_analyzer/tests/snapshots/golden_err__enum_drop_missing_method_diags.snap
---
source: crates/ignis_analyzer/tests/golden_err.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[ERROR] A0132: type 'Resource' declares @implements(Drop) but has no 'drop' method
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:19-62
