crates/ignis_analyzer/tests/snapshots/golden_err__enum_field_no_init.snap
---
source: crates/ignis_analyzer/tests/golden_err.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[ERROR] A0065: Static field 'value' in 'Color' requires an initializer
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:39-50
