crates/ignis_analyzer/tests/snapshots/golden_err__enum_variant_payload_move_consumes_owner.snap
---
source: crates/ignis_analyzer/tests/golden_err.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[WARN] A0122: unused variable 'wrapped'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:211-261
[WARN] A0122: unused variable 'again'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:266-291
[ERROR] O0001: Use of moved value 'value'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:285-290
  note: 'record Owned' implements Drop, which makes it non-Copy
  note: help: consider adding '@implements(Clone)' to 'record Owned' and implementing a 'clone' method
