crates/ignis_analyzer/tests/snapshots/golden_err__ffi_leak_warning.snap
---
source: crates/ignis_analyzer/tests/golden_err.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[WARN] O0004: Possible memory leak: ownership of 'a' escapes to FFI
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:104-117
