crates/ignis_analyzer/tests/snapshots/golden_err__for_of_mut_ref_on_immutable_array.snap
---
source: crates/ignis_analyzer/tests/golden_err.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[ERROR] A0071: cannot take mutable reference in for-of over immutable vector
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:71-72
