crates/ignis_analyzer/tests/snapshots/golden_err__for_of_non_iterable.snap
---
source: crates/ignis_analyzer/tests/golden_err.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[WARN] A0122: unused variable 'y'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:59-60
[ERROR] A0069: for-of expects vector type, got 'i32'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:64-65
