crates/ignis_analyzer/tests/snapshots/golden_err__generic_bounds_reject_non_trait_bound.snap
---
source: crates/ignis_analyzer/tests/golden_err.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[ERROR] A0189: generic bound 'NotATrait' must resolve to a trait
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:68-77
